todo.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: manawa-todo
    name: manawa-todo
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/adeo/manawa-todo
      from:
        kind: DockerImage
        name: quay.io/adeo/manawa-todo:v6
      generation: 2
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: manawa-todo
    name: manawa-todo
  spec:
    replicas: 1
    selector:
      app: manawa-todo
      deploymentconfig: manawa-todo
    strategy:
      resources: {}
      type: Rolling
    template:
      metadata:
        labels:
          app: manawa-todo
          deploymentconfig: manawa-todo
      spec:
        containers:
        - image: quay.io/adeo/manawa-todo:v6
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 22
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: manawa-todo
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8081
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 27
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 600m
              memory: 600Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - manawa-todo
        from:
          kind: ImageStreamTag
          name: manawa-todo:latest
      type: ImageChange
