service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
  name: manawa-todo
  labels:
      app: manawa-todo
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    deploymentconfig: manawa-todo
